<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parentScreen"
    android:background="@color/white"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".Activities.ForgetPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="-15dp"
            app:srcCompat="@drawable/signin" />

        <LinearLayout
            android:id="@+id/lvl_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/loginbg"
            android:elevation="15dp"
            android:orientation="vertical"
            android:paddingHorizontal="30dp">

            <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.Large.DoubleBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:SpinKit_Color="@color/blue" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgetpassword"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:autofillHints=""
                    android:hint="Enter email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/teal_200"
                    android:textSize="16sp"
                    app:backgroundTint="@color/teal_200" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:background="@color/blue"
                android:gravity="center"
                android:padding="15dp"
                android:foreground="@drawable/ripple_effect"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/lLytSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/backtologin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:foreground="@drawable/ripple_effect"
                    android:text="@string/backtologin"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>