<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/parentScreen"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:context=".Activities.LoginScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/ivLogin"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="-15dp"
            app:srcCompat="@drawable/signin" />

        <com.github.ybq.android.spinkit.SpinKitView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.DoubleBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:SpinKit_Color="@color/blue" />


        <LinearLayout
            android:id="@+id/lvl_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/loginbg"
            android:elevation="15dp"
            android:orientation="vertical"
            android:paddingHorizontal="30dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="22sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="Enter email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHint="@color/teal_200"
                    android:textSize="16sp"
                    app:backgroundTint="@color/teal_200" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHint="@color/teal_200"
                    android:textSize="16sp"
                    app:backgroundTint="@color/teal_200" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:foreground="@drawable/ripple_effect"
                android:layout_marginEnd="10dp"
                android:text="@string/forgot"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:background="@color/blue"
                android:gravity="center"
                android:padding="15dp"
                android:foreground="@drawable/ripple_effect"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/lLytSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvDontHaveAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/dont_have_account"
                    android:textColor="@color/teal_200"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tvSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:gravity="center"
                    android:text="SignUp"
                    android:foreground="@drawable/ripple_effect"
                    android:textColor="@color/black"
                    android:textSize="16sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:gravity="center"
                    android:text="@string/Orloginwith"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:background="@color/black" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                android:gravity="center">

                <RelativeLayout
                    android:id="@+id/signup_withGoogle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginHorizontal="30dp"
                    android:background="@drawable/bg_gmail_button"
                    android:foreground="@drawable/ripple_effect"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/google_image"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/google" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="15dp"
                        android:layout_toRightOf="@+id/google_image"
                        android:foreground="@drawable/ripple_effect"
                        android:text="Continue with Google"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</ScrollView>